# Strobeltpi

./: Dockerfile  README.md  pyproject.toml
src/strobeltpi/: __init__.py  config.py  docker_metrics.py  eventhub_sender.py  metrics_agent.py  security.md
src/strobeltpi_docker_metrics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_config_bootstrap.py  test_docker_metrics.py  test_eventhub_sender.py
